--- a/app/package.json
+++ b/app/package.json
@@ -63,6 +63,12 @@
   },
   "private": true,
   "devDependencies": {
-    "electron-rebuild": "^1.8.5"
+    "electron-rebuild": "^1.8.5",
+    "eslint": "^7.2.0",
+    "eslint-config-google": "^0.14.0"
+  },
+  "scripts": {
+    "lint": "eslint .",
+    "lint-fix": "eslint . --fix"
   }
 }
